--- a/.github/config.yml
+++ b/.github/config.yml
@@ -1,10 +1,2 @@
 newPRWelcomeComment: >
-  Thanks so much for opening your first PR here!
-  
-# Number of days of inactivity before an Issue is closed for lack of response
-daysUntilClose: 1
-# Label requiring a response
-responseRequiredLabel: test
-# Comment to post when closing an Issue for lack of response. Set to `false` to disable
-closeComment: >
-  Test successful!
+  Awesome you did it!
